# exercises-in-programming-style-Rust

./: README.md
Qqarantine/: Cargo.toml
abstract_things/: Cargo.toml
abstract_things/src/: abstract_things_fun.rs  lib.rs
actors/: Cargo.toml
actors/src/: actors_fun.rs  lib.rs
aspects/: Cargo.toml
aspects/src/: aspects_fun.rs  lib.rs
bulletin_board/: Cargo.toml
bulletin_board/src/: bulletin_board_fun.rs  lib.rs
closed_maps/: Cargo.toml
closed_maps/src/: closed_maps_fun.rs  lib.rs
constructivist/: Cargo.toml
constructivist/src/: constructivist_fun.rs  lib.rs
dataspaces/: Cargo.toml
dataspaces/src/: dataspaces_fun.rs  lib.rs
double_map_reduce/: Cargo.toml
double_map_reduce/src/: double_map_reduce_fun.rs  lib.rs
eips_main/: .gitignore  Cargo.toml
eips_main/data/: text.txt
eips_main/src/: main.rs
golf/: Cargo.toml
golf/src/: golf_fun.rs  lib.rs
hollywood/: Cargo.toml
hollywood/src/: hollywood_fun.rs  lib.rs
kick_forward/: Cargo.toml
kick_forward/src/: kick_forward_fun.rs  lib.rs
lazy_rivers/: Cargo.toml
lazy_rivers/src/: lazy_rivers_fun.rs  lib.rs
lazy_rivers_mp/: Cargo.toml
lazy_rivers_mp/src/: lazy_rivers_mp_fun.rs  lib.rs
letterbox/: Cargo.toml
letterbox/src/: letterbox_fun.rs  lib.rs
map_reduce/: Cargo.toml
map_reduce/src/: lib.rs  map_reduce_fun.rs
mirror/: Cargo.toml
mirror/src/: lib.rs  mirror_fun.rs
persistent_tables/: Cargo.toml
persistent_tables/src/: lib.rs  persistent_tables_fun.rs
pipe/: Cargo.toml
pipe/src/: lib.rs  pipe_fun.rs
quarantine/: Cargo.toml
quarantine/src/: lib.rs  quarantine_fun.rs
tantrum/: Cargo.toml
tantrum/src/: lib.rs  tantrum_fun.rs
the_one/: Cargo.toml
the_one/src/: lib.rs  the_one_fun.rs
things/: Cargo.toml
things/src/: lib.rs  things_fun.rs
trinity/: Cargo.toml
trinity/src/: lib.rs  trinity_fun.rs
