[package]
edition = "2021"
name = "eips_main"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abstract_things = {path = "../abstract_things"}
closed_maps = {path = "../closed_maps"}
golf = {path = "../golf"}
kick_forward = {path = "../kick_forward"}
letterbox = {path = "../letterbox"}
mirror = {path = "../mirror"}
pipe = {path = "../pipe"}
the_one = {path = "../the_one"}
things = {path = "../things"}
