[package]
edition = "2021"
name = "eips_main"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abstract_things = {path = "../abstract_things"}
actors = {path = "../actors"}
aspects = {path = "../aspects"}
bulletin_board = {path = "../bulletin_board"}
closed_maps = {path = "../closed_maps"}
constructivist = {path = "../constructivist"}
dataspaces = {path = "../dataspaces"}
golf = {path = "../golf"}
hollywood = {path = "../hollywood"}
kick_forward = {path = "../kick_forward"}
lazy_rivers = {path = "../lazy_rivers"}
lazy_rivers_mp = {path = "../lazy_rivers_mp"}
letterbox = {path = "../letterbox"}
map_reduce = {path = "../map_reduce"}
mirror = {path = "../mirror"}
persistent_tables = {path = "../persistent_tables"}
pipe = {path = "../pipe"}
quarantine = {path = "../quarantine"}
tantrum = {path = "../tantrum"}
the_one = {path = "../the_one"}
things = {path = "../things"}
